# CppMiniGames

./: CMakeLists.txt  Chomp.cpp  Chomp.h  G2048.cpp  G2048.h  Gomoku.cpp  Gomoku.h  MS-HS-backup.txt  Maxim.cpp  Maxim.h  Minesweeper.cpp  Minesweeper.h  README.md  STB.cpp  STB.h  Sudoku.cpp  Sudoku.h  Sudoku1.txt  ThreeMensMorris.cpp  ThreeMensMorris.h  main.cpp
Sudoku/: Sudoku2.txt
